# nanoOasis

./: .gitignore  LICENSE  README.md  data.py  data_gen.py  diffusion.py  encode_latents.py  export.py  game.py  infer.py  modal_data_gen.py  modal_train.py  model.py  play.sh  pyproject.toml  train.py  train_vae.py  vae.py
assets/: game recording.mov
configs/: launch.yaml  overfit.yaml  small.yaml  small_256_p4.yaml  small_256_p4_mw15.yaml  small_256_p4_mw5.yaml  small_concat.yaml  small_ctx16.yaml  small_ctx4.yaml  small_eps.yaml  small_flatsigma.yaml  small_patch1.yaml  tiny.yaml  tiny_latents.yaml
data/smoke/: ep_000.npz.zst  ep_001.npz.zst  ep_002.npz.zst  ep_003.npz.zst  ep_004.npz.zst  index.parquet
demo/: .vercelignore  index.html  inference.js  main.js  remote.js  styles.css  vercel.json
demo/assets/: manifest.json  seed_contexts.npz
server/: ws.py
tests/: golden_actions.npy  golden_game_state.json  test_config.py  test_data.py  test_game.py  test_model.py  test_vae.py
