[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-oasis"
version = "0.0.1"
description = "A small reference implementation of a diffusion-based interactive world model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "numpy",
    "pygame>=2.5",
    "zstandard>=0.22",
    "omegaconf>=2.3",
    "tqdm",
    "imageio[ffmpeg]",
    "pyarrow",
    "wandb",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
modal = ["modal>=0.66", "xformers"]
browser = ["onnx>=1.16", "onnxruntime>=1.17", "fastapi>=0.110", "uvicorn>=0.27"]

[tool.setuptools]
packages = []
